--- a/style.css
+++ b/style.css
@@ -5,23 +5,70 @@
 body {
     background-image: url('https://i.pinimg.com/736x/ef/c2/00/efc200a463f2e7ab8b0fb774a7fd85ee.jpg');
     background-size: 3500, 500;
-
+            margin: 0;
+            padding: 0;
+            scroll-behavior: smooth;
 }
+
+
+#navbar {
+    background-color: goldenrod;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+#navbar ul {
+    list-style-type: none;
+    margin: 0.5%;
+    padding: 0;
+    display: flex;
+}
+#navbar li {
+    margin: 0;
+    padding: 0;
+}
+
+#navbar a{
+    display: block;
+    font-family: 'Courier New', Courier, monospace;
+    font-size:large;
+    color:azure;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+#navbar a:hover {
+    background-color:rgb(173, 95, 0) ;
+}
+
+#Character {
+
+    position: relative;
+ top: 10%;
+}
+
+section {
+    height: 100vh;
+}
+
 
 .mainimg {
     height: 700px;
     width: 450px;
     position: relative;
-    top: 100px;
+    top:200px;
     right: -400px;
 
    
 }
 
+
 .title {
     width: 15%;
     position: relative;
-    top: -600px;
+    top: -500px;
     right: -765px;
 }
 h1{
